modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/lambda_cyclic_ref_call_arg.gd
var f = (func (_a): return 0).call(x)
var x = f

func test():
	pass
